Implement i18n (#2)
* Upgrade to Java 25 and JavaFX 24
* Update GitHub Actions workflow
* Implement i18n with support for English and Swedish

Add support classes Language and I18n. Add message bundles
for English and Swedish. Use message bundles in FXML files
and controllers.